# OrbitDesk

./: .gitignore  AI驱动开发简述.txt  CLAUDE.md  CMakeLists.txt  LICENSE  OrbitDesk功能优化与扩展规划.md  README.md  TEST_CASES.md  ai_chat_manager.cpp  ai_chat_manager.h  app.rc  calculator.py  chat_session_manager.cpp  chat_session_manager.h  circular_progress.cpp  circular_progress.h  dark.qss  database_manager.cpp  database_manager.h  history_chart.cpp  history_chart.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitor_page.cpp  monitor_page.h  note_manager.cpp  note_manager.h  pomodoro_manager.cpp  pomodoro_manager.h  resources.qrc  system_monitor.cpp  system_monitor.h  task_manager.cpp  task_manager.h  workflow_manager.cpp  workflow_manager.h  说明与解析.txt  项目开发总结.md
